--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "esbuild": "^0.25.0",
     "minimist": "^1.2.8",
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "vue": "^3.5.13"
   }
 }
